--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
           : null;
       };
 
-      const getAddressFromResult = (r) =>
-        `${r.address.street} ${r.address.street_number}, ${r.address.municipality}`;
+      const getStreetNameNumberZipFromResult = (r) =>
+        `${r.address.street} ${r.address.street_number}, ${r.address.zip}`;
 
       const link = (children, href) =>
         gridjs.h(
@@ -249,9 +249,15 @@
                   {
                     name: "Address",
                     formatter: (r) => {
-                      const address = getAddressFromResult(r);
+                      const address = getStreetNameNumberZipFromResult(r);
                       return gridjs.h("span", {}, [
-                        link(address, `https://www.homeq.se/lagenhet/${r.id}`),
+                        link(
+                          address +
+                            " " +
+                            // Mölndal apartments has city: Göteborg, municipality: Mölndal...
+                            r.address.municipality,
+                          `https://www.homeq.se/lagenhet/${r.id}`
+                        ),
                         " (",
                         link(
                           "Map",
@@ -298,14 +304,16 @@
                         `${(distance / 1000).toFixed(1)} km `,
                       ]);
 
-                      const address = getAddressFromResult(r);
                       return link(
                         text,
                         `https://www.google.com/maps/dir/?api=1&travelmode=bicycling&origin=${encodeURIComponent(
                           baseCoord.lat
                         )},${encodeURIComponent(
                           baseCoord.lng
-                        )}&destination=${encodeURIComponent(address)}`
+                        )}&destination=${encodeURIComponent(
+                          // Use zip code for destination for better navigation result
+                          getStreetNameNumberZipFromResult(r)
+                        )}`
                       );
                     },
                     sort: {
